# redis-stream-coordinator

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  build.gradle.kts  compose.aws-elasticache.yaml  compose.aws-public-redis.yaml  compose.e2e.yaml  compose.pods.yaml  compose.stress.yaml  compose.yaml  gradle.properties  index.html  index.md  rcp-0001-coordinator-managed-rebalance.md  settings.gradle.kts
.github/scripts/: generate_grouped_test_report.py  render_design_docs.py  test_docker_distribution.py  test_generate_grouped_test_report.py  test_render_design_docs.py
.github/workflows/: codex-review.yml  (+6 more)
clients/python/: README.md  pyproject.toml
clients/python/redisstream/: __init__.py  client.py  consumer.py  errors.py  hashing.py  identity.py  models.py  producer.py  protocol.py  redis_stream.py
clients/python/tests/: compose.redis.yaml  test_client.py  test_consumer.py  test_integration_optional.py  test_integration_real_redis.py  test_models.py  test_producer.py  test_redis_stream.py
consumer-spring-boot-starter/: build.gradle.kts
coordinator-server/: build.gradle.kts
docs/: AGENTS.md  PRD.md  coordinator-implementation-plan.md  docker.md  ec2-deployment.md  implementation-status.md  intellij-setup.md  operations-runbook.md  testing.md
gradle/: libs.versions.toml
prompts/: review.md
redis-stream-coordinator/: PRD.md
redisstream-core/: build.gradle.kts
redisstream-spring-boot-starter/: build.gradle.kts
scripts/: with-aws-redis-secret.sh
terraform/: README.md
(+1429 files in other folders)
