[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redisstream-coordinator"
version = "0.1.0"
description = "Sync Python producer and consumer client for Redis Stream Coordinator"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Redis Stream Coordinator contributors" }
]
dependencies = [
  "requests>=2.31",
  "redis>=5",
]

[project.optional-dependencies]
test = []

[tool.setuptools.packages.find]
include = ["redisstream*"]
